--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@reduxjs/toolkit": "^1.7.2",
+    "@types/react": "^17.0.39",
+    "@types/react-native": "^0.66.16",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "jest": "^26.6.3",
@@ -29,7 +31,8 @@
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
-    "tailwind-react-native-classnames": "^1.5.1"
+    "tailwind-react-native-classnames": "^1.5.1",
+    "typescript": "^4.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
